# Nashoba-Robotics2012

./: .cproject  .cproject.orig  .gitignore  .gitignore.orig  .project  .project.orig  .wrproject  AnalogIRSensor.cpp  AnalogIRSensor.cpp.REMOTE.3627.cpp  AnalogIRSensor.h  BallSensor.cpp  BallSensor.h  BallSensor.h.orig  BallTracker.cpp  BallTracker.h  CMakeLists.txt  CamSensor.cpp  CamSensor.h  CommandBase.cpp  CommandBase.h  CommandBasedRobot.cpp  CommandBasedRobot.h  CoprocessorVision.cpp  CoprocessorVision.cpp.orig  CoprocessorVision.h  Debug.h  DriveForwardAutoCommand.cpp  DriveForwardAutoCommand.h  DriveSubsystem.cpp  DriveSubsystem.h  ExampleCommand.cpp  HardwareSettings.h  JoyStickDriveCommand.cpp  JoyStickDriveCommand.h  LICENSE  OperatorInput.cpp  OperatorInput.cpp.orig  OperatorInput.h  OperatorInput.h.orig  Robotmap.h  (+3 more)
.csettings/: cdt.managedbuild.config.gnu.exe.debug.1049959158_cdtBuildSystem  cdt.managedbuild.config.gnu.exe.debug.1049959158_org.eclipse.cdt.core.pathentry  cdt.managedbuild.config.gnu.exe.debug.1049959158_org.eclipse.cdt.core.settings  cdt.managedbuild.config.gnu.exe.debug.1049959158_scannerConfiguration  cdt.managedbuild.config.gnu.exe.release.925187187_cdtBuildSystem  cdt.managedbuild.config.gnu.exe.release.925187187_org.eclipse.cdt.core.settings
Commands/: AddParallelTestingCommand.cpp  AddParallelTestingCommand.h  AlignBackWithWallCommand.cpp  AlignBackWithWallCommand.h  AlignFrontWithWallCommand.cpp  AlignFrontWithWallCommand.h  AlignWithWallCommand.cpp  AlignWithWallCommand.h  AllIdleCommand.cpp  AllIdleCommand.h  AllReceiveCommand.cpp  (+110 more)
(+161 files in other folders)
